# metro-map-editor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  Trunk.toml  clippy.toml  index.html  tailwind.config.js  tarpaulin-report.html
.github/workflows/: check.yml  kubernetes.yml
benches/: draw_benchmarks.rs  map_algo_benchmarks.rs
docs/: README.md
exisiting_maps/: berlin.graphml  disjointed_test.json  karlsruhe.graphml  routing_test.json  small_test.json  wien.graphml
existing_maps/: berlin.graphml  london_new.graphml  montreal.graphml  small_test.graphml  small_test.json  wien.graphml
research_notebooks/: heatmaps.ipynb  montreal_heatmap.json  washington_heatmap.json  wien_heatmap.json
src/: lib.rs  main.rs
src/algorithm/: a_star.rs  calc_direction.rs  closest_corner.rs  cost_calculation.rs  draw_edge.rs  edge_dijkstra.rs  executor.rs  grid.rs  local_search.rs  mod.rs  occupation.rs  order_edges.rs  recalculate_map.rs  route_edges.rs  station_contraction.rs  utils.rs
src/algorithm/drawing/: canvas_context.rs  draw_edge.rs  grid.rs  labeling.rs  mod.rs
src/algorithm/objects/: line.rs  map.rs  mod.rs  station.rs
src/algorithm/utils/: mod.rs
src/algorithms/: a_star.rs  calc_direction.rs  mod.rs  occupation.rs  utils.rs
src/algorithms/drawing/: canvas_context.rs  closest_corner.rs  draw_edge.rs  grid.rs  labeling.rs  mod.rs
src/algorithms/line_straightening/: fit_edges.rs  line_creation.rs  mod.rs  update_map.rs
src/algorithms/map_layout/: cost_calculation.rs  edge_dijkstra.rs  executor.rs  local_search.rs  mod.rs  recalculate_map.rs  route_edges.rs  station_contraction.rs
src/components/: canvas.rs  mod.rs  navbar.rs  page.rs  sidebar.rs
src/components/atoms/: button.rs  button_group.rs  canvas_info_box.rs  link_icon.rs  mod.rs  modal.rs  number_input.rs  text_with_edit.rs  toggle.rs
src/components/canvas/: dbl_click.rs  keydown.rs  mod.rs  mouse_down.rs  mouse_move.rs  mouse_out.rs  mouse_up.rs  other.rs  scroll.rs
src/components/molecules/: canvas.rs  edge_info_box.rs  error_box.rs  file_downloader.rs  file_modal.rs  map_exporter.rs  mod.rs  settings_modal.rs  station_info_box.rs
src/components/organisms/: canvas_controls.rs  mod.rs  navbar.rs  sidebar.rs
src/components/pages/: home.rs  mod.rs
src/components/state/: canvas.rs  error.rs  history.rs  interaction.rs  map.rs  mod.rs
src/models/: edge.rs  grid_node.rs  line.rs  map.rs  mod.rs  selected_line.rs  selected_station.rs  station.rs
src/state/: map.rs  mod.rs
src/utils/: error.rs  id_manager.rs  line_sections.rs  mod.rs  parsing.rs
src/utils/graphml/: decode.rs  graphml_map.rs  mod.rs
src/utils/heatmap_data/: create_heatmap.rs  mod.rs  models.rs
src/utils/json/: decode.rs  encode.rs  json_models.rs  mod.rs
