[package]
name = "metro-map-editor"
authors = ["Calli <me@calli.dev>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
web-sys = { version = "0.3.72", features = [
    "KeyboardEvent",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Element",
    "Window",
] }
wasm-bindgen = { version = "0.2.95" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
quick-xml = { version = "0.36", features = ["serialize"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
csscolorparser = "0.7"
rand = "0.8"
priority-queue = "2.1"
ordered-float = "4.3"
itertools = "0.13"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
benchmarking = []

[[bench]]
name = "map_algo_benchmarks"
harness = false

[[bench]]
name = "draw_benchmarks"
harness = false

[profile.bench]
debug = true
