[package]
name = "metro-map-editor"
authors = ["Calli <me@calli.dev>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.7.1", features = ["csr", "nightly"] }
web-sys = { version = "0.3.76", features = [
    "KeyboardEvent",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "FileList",
    "File",
    "Url",
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Element",
    "Window",
    "FocusEvent",
    "OffscreenCanvasRenderingContext2d",
    "OffscreenCanvas",
    "ImageEncodeOptions",
] }
js-sys = "0.3.76"
wasm-bindgen = { version = "0.2.99" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
csscolorparser = "0.7"
rand = "0.8"
priority-queue = "2.1"
ordered-float = "4.6"
itertools = "0.13"
leptos_workers = "0.2.2"
futures-core = "0.3"
futures-util = "0.3"
futures-test = "0.3"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3.0", features = ["futures"] }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
benchmarking = []
heatmap = ["rayon"]

[[bench]]
name = "map_algo_benchmarks"
harness = false

[[bench]]
name = "draw_benchmarks"
harness = false

[profile.bench]
debug = true
